5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1715_3038.log
== TEST (2019-05-02 16:42:00) 
-- CODE:
from math import abs() 
x = float(input("digite um valor "))

if(x<=-1 and -1 < x < 0 and x=0 or x>=1 or 0<x<1):
	print(abs()math())
if()

-- ERROR:
File "XXXX", line 1
    from math import abs() 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:21) 
-- CODE:
from math import abs() 
x = float(input("digite um valor x "))

if(x<=-1 or  x>=1 and -1<x<0 or 0<x<1 and x=0): 
	print(round(
	

-- ERROR:
File "XXXX", line 1
    from math import abs() 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:30) 
-- CODE:
math import abs() 
x = float(input("digite um valor x "))

if(x<=-1 or  x>=1 and -1<x<0 or 0<x<1 and x=0): 
	print(round(
	

-- ERROR:
File "XXXX", line 1
    math import abs() 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
